# medical-insurance-interface-SDK

./: .dockerignore  .env.example  .gitignore  COMMANDS.md  Dockerfile  Dockerfile.prod  README.md  add_2201_registration_config.py  apifox_import.json  check_2201_response_mapping.py  check_db_configs.py  check_his_config.py  check_tables.py  debug_1101_validation.py  debug_2201_apifox_response.py  debug_2201_response.py  debug_data_parser.py  debug_task_manager.py  docker-compose.prod.yml  docker-compose.yml  insert_test_interfaces.py  medical_insurance_openapi.json  performance_report.json  pyproject.toml  requirements.txt  setup.py  setup_async_database.py  simple_apifox_test.py  simple_db_check.py  test_apifox_mystery.py  test_async_processing.py  test_async_processing_simple.py  test_async_tasks.py  test_client_implementation.py  test_config_system.py  test_connection_pool.py  test_connection_pool_optimization.py  test_connection_pool_optimization_simple.py  test_connection_pool_simple.py  test_connection_pool_with_env.py  (+13 more)
csharp_client/: MainForm.cs  MedicalInsurance.Desktop.csproj  MedicalInsuranceClient.cs  Program.cs
database/: README.md  db_manager.py  setup_database.sql
docs/: ASYNC_PROCESSING_IMPLEMENTATION.md  DATA_SYNC_SERVICE_IMPLEMENTATION.md  HIS_INTEGRATION_IMPLEMENTATION_SUMMARY.md  README.md  api-documentation.md  configuration-data-guide.md  database-setup-guide.md  error-handling-implementation-summary.md  interface-configuration-guide.md  performance_report.csv  setup-commands.md  start_worker_instructions.md  stress_test_report.md  task-10-completion-summary-updated.md  task-10-completion-summary.md  task-11-completion-summary.md  task-18.2-completion-summary.md  task-19-completion-summary.md  task-2-completion-summary.md  task-9-completion-summary.md  task-9.2-completion-summary.md  test_cleanup_report.md  troubleshooting-guide.md  usage-examples.md
examples/: README.md  advanced_usage_example.py  basic_usage_example.py  client_usage_example.py  common_scenarios_guide.py  (+5 more)
(+174 files in other folders)
